# cmake-examples

./: CMakeLists.txt  README.md  cmake_execution_examples.sh
include/: foo.h
src/: foo.cpp  main.cpp
